tests/character_class_invalid_utf_sequence_diag/expected_err.txt
grammar.peg:1:10: error: This UTF sequence is invalid.
 1 | Root <- [� ]
   |          ~
